--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
+<link rel="stylesheet" href="/style.css" />
 
-
-<div>
-  <div>
+<div class="card">
+  <div class="card-message">
     Thanks for being a part of our community in 2019. We can't wait to see what
     we create together in 2020!
   </div>
-  <div>
+  <div class="card-signature">
     From the Glitch team
   </div>
-
-  <a href="https://glitch.com/edit/#!/remix/holiday-card-2020-proposal">
-    Remix This Card
-  </a>
 </div>
+
+<a
+  class="button"
+  href="https://glitch.com/edit/#!/remix/holiday-card-2020-proposal"
+>
+  Remix This Card
+</a>
+<script src="/script.js" defer></script>
