⛩🍭 Checkpoint ./style.css:2246547/611 ./index.html:2246547/1530

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <link rel="stylesheet" href="/style.css" />
 
-<div class="card">
-  <div class="card-message">
-    Thanks for being a part of our community in 2019. We can't wait to see what
-    we create together in 2020!
-  </div>
-  <div class="card-signature">
-    From the Glitch team
+<div class="cardPositioningContainer">
+  <div class="card">
+    <div class="card-message">
+      Thanks for being a part of our community in 2019. We can't wait to see
+      what we create together in 2020!
+    </div>
+    <div class="card-signature">
+      From the Glitch team
+    </div>
   </div>
 </div>
 
