--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/style.css" />
 
 <div class="cardPositioningContainer">
+  <div class="topFold"></div>
   <div class="card">
     <div class="card-message">
       Thanks for being a part of our community in 2019. We can't wait to see
@@ -10,6 +11,7 @@
       From the Glitch team
     </div>
   </div>
+  <div class="bottomFold"></div>
 </div>
 
 <a
