--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       what we create together in 2020!
     </div>
     <div class="card-signature">
+      <img src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Fnightfish.svg?v=1575410607741">
       From the Glitch team
     </div>
   </div>
