🐋👓 Checkpoint ./snowAnimation.js:2246547/14326 ./script.js:2246547/51 ./index.html:2246547/1525 ./style.css:2246547/4775

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="/style.css" />
 
+<canvas class="sparkleCanvas"></canvas>
+
 <div class="cardPositioningContainer">
   <div class="topFold"></div>
   <div class="card">
@@ -8,7 +10,9 @@
       what we create together in 2020!
     </div>
     <div class="card-signature">
-      <img src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Fnightfish.svg?v=1575410607741">
+      <img
+        src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Fnightfish.svg?v=1575410607741"
+      />
       From the Glitch team
     </div>
   </div>
