👼🏚 Checkpoint ./index.html:2246547/5392 ./style.css:2246547/5159

--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 
 <canvas class="sparkleCanvas"></canvas>
 
+<div class="presents">
+  <img
+    class="presents-1"
+    src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FredPackage.svg?v=1575481670665"
+  />
+  <img
+    class="presents-2"
+    src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FgreenPackage.svg?v=1575481670458"
+  />
+  <img
+    class="presents-3"
+    src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FbluePackage.svg?v=1575481670595"
+  />
+</div>
+
 <div class="cardPositioningContainer">
   <div class="topFold"></div>
   <div class="card">
