⏲🐝 Checkpoint ./index.html:2246547/76 ./snowAnimation.js:2246547/2 ./style.css:2246547/6468

--- a/index.html
+++ b/index.html
@@ -40,4 +40,6 @@
 >
   Remix This Card
 </a>
+
+h<script src="ttps://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
 <script src="/script.js" type="module"></script>
