📒🎫 Checkpoint ./style.css:2246547/6365 ./index.html:2246547/3128 ./3DPresents.js:2246547/18926 ./script.js:2246547/241

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <canvas class="sparkleCanvas"></canvas>
 
 <div class="presents">
-  <img
-    class="presents-1"
-    src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FredPackage.svg?v=1575481670665"
-  />
+  <canvas class="presents-1"></canvas>
   <img
     class="presents-2"
     src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FgreenPackage.svg?v=1575481670458"
@@ -21,8 +18,12 @@
   <div class="topFold"></div>
   <div class="card">
     <div class="card-message">
-      Thanks for being a part of our community in 2019. We can't wait to see
-      what we create together in 2020!
+      <p>
+        Thanks for being a part of our community in 2019.
+      </p>
+      <p>
+        We can't wait to see what we create together in 2020!
+      </p>
     </div>
     <div class="card-signature">
       <img
@@ -41,5 +42,5 @@
   Remix This Card
 </a>
 
-h<script src="ttps://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
+h<script src="https://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
 <script src="/script.js" type="module"></script>
