🗼🙈 Checkpoint ./3DPresents.js:2246547/6914 ./style.css:2246547/47 ./index.html:2246547/166

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <canvas class="sparkleCanvas"></canvas>
 
 <div class="presents">
-  <canvas class="presents-1"></canvas>
-  <img
-    class="presents-2"
-    src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FgreenPackage.svg?v=1575481670458"
-  />
+  <canvas class="presents-1" width="250" height="250"></canvas>
+
   <img
     class="presents-3"
     src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FbluePackage.svg?v=1575481670595"
