🚊🎒 Checkpoint ./index.html:2246547/296 ./3DPresents.js:2246547/4930 ./script.js:2246547/744 ./style.css:2246547/66

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 
 <div class="presents">
   <canvas class="presents-1" width="250" height="250"></canvas>
-
-  <img
-    class="presents-3"
-    src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2FbluePackage.svg?v=1575481670595"
-  />
+  <canvas class="presents-2" width="100" height="100"></canvas>
+  <canvas class="presents-3" width="300" height="300"></canvas>
 </div>
 
 <div class="cardPositioningContainer">
