💕🕌 Checkpoint ./index.html:2246547/245 ./style.css:2246547/29314

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </div>
 
 <div class="cardPositioningContainer">
-  <div class="topFold"></div>
+  <div class="topFold">
+    <div class="topFold-front"></div>
+  </div>
   <div class="card">
     <div class="card-message">
       <p>
@@ -28,7 +30,9 @@
       From the Glitch team
     </div>
   </div>
-  <div class="bottomFold"></div>
+  <div class="bottomFold">
+    <div class="bottomFold-front"></div>
+  </div>
 </div>
 
 <a
