😇🕴 Checkpoint ./script.js:2246547/45 ./buttonHover.js:2246547/122 ./index.html:2246547/5568 ./style.css:2246547/33385

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <title>Happy New Year from Glitch</title>
-
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, shrink-to-fit=no"
+/>
 <link rel="stylesheet" href="/style.css" />
 
 <canvas class="sparkleCanvas"></canvas>
@@ -33,14 +36,14 @@
   <div class="bottomFold">
     <div class="bottomFold-front"></div>
   </div>
-</div>
 
-<a
-  class="button"
-  href="https://glitch.com/edit/#!/remix/holiday-card-2020-proposal"
->
-  Remix This Card
-</a>
+  <a
+    class="button"
+    href="https://glitch.com/edit/#!/remix/holiday-card-2020-proposal"
+  >
+    Remix This Card
+  </a>
+</div>
 
 h<script src="https://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
 <script src="/script.js" type="module"></script>
