🐀🐑 Checkpoint ./index.html:2246547/3043

--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
-<title>Happy New Year from Glitch</title>
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, shrink-to-fit=no"
-/>
-<link rel="stylesheet" href="/style.css" />
+<html>
+  <head>
+    <title>Happy New Year from Glitch</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <canvas class="sparkleCanvas"></canvas>
 
-<canvas class="sparkleCanvas"></canvas>
-
-<div class="presents">
-  <canvas class="presents-1" width="250" height="250"></canvas>
-  <canvas class="presents-2" width="100" height="100"></canvas>
-  <canvas class="presents-3" width="300" height="300"></canvas>
-</div>
-
-<div class="cardPositioningContainer">
-  <div class="topFold">
-    <div class="topFold-front"></div>
-  </div>
-  <div class="card">
-    <div class="card-message">
-      <p>
-        Thanks for being a part of our community in 2019.
-      </p>
-      <p>
-        We can't wait to see what we create together in 2020!
-      </p>
+    <div class="presents">
+      <canvas class="presents-1" width="250" height="250"></canvas>
+      <canvas class="presents-2" width="100" height="100"></canvas>
+      <canvas class="presents-3" width="300" height="300"></canvas>
     </div>
-    <div class="card-signature">
-      <img
-        src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Fnightfish.svg?v=1575410607741"
-      />
-      From the Glitch team
+
+    <div class="cardPositioningContainer">
+      <div class="topFold">
+        <div class="topFold-front"></div>
+      </div>
+      <div class="card">
+        <div class="card-message">
+          <p>
+            Thanks for being a part of our community in 2019.
+          </p>
+          <p>
+            We can't wait to see what we create together in 2020!
+          </p>
+        </div>
+        <div class="card-signature">
+          <img
+            src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Fnightfish.svg?v=1575410607741"
+          />
+          From the Glitch team
+        </div>
+      </div>
+      <div class="bottomFold">
+        <div class="bottomFold-front"></div>
+      </div>
+
+      <a
+        class="button"
+        href="https://glitch.com/edit/#!/remix/holiday-card-2020-proposal"
+      >
+        Remix This Card
+      </a>
     </div>
-  </div>
-  <div class="bottomFold">
-    <div class="bottomFold-front"></div>
-  </div>
 
-  <a
-    class="button"
-    href="https://glitch.com/edit/#!/remix/holiday-card-2020-proposal"
-  >
-    Remix This Card
-  </a>
-</div>
-
-h<script src="https://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
-<script src="/script.js" type="module"></script>
+    <script src="https://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
+    <script src="/script.js" type="module"></script>
+  </body>
+</html>
