👋🎪 Checkpoint ./index.html:2246547/23

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Thanks for being a part of our community in 2019."
     />
-    <title>Happy New Year from Glitch</title>
+    <title>Thank You from Glitch</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preload" href="/script.js" as="script" />
   </head>
