⛵️👩‍❤️‍💋‍👩 Checkpoint ./.glitch-assets:2246547/358 ./index.html:2246547/4680 ./script.js:2246547/1210 ./3DPresent.js:2246547/8499 ./snowAnimation.js:2246547/8849

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Thank You from Glitch</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preload" href="/script.js" as="script" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Ffavicon.png?v=1575577779339"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="cardPositioningContainer">
