--- a/index.html
+++ b/index.html
@@ -26,18 +26,11 @@
       <div class="card">
         <div class="card-message">
           <h1>
-            Thanks for being a part of our community in 2019.
+            Happy New Year 2020!
           </h1>
           <p>
-            We can't wait to see what we create together in 2020!
+             Have an awesome year!! Stay health & keep coding! :D 
           </p>
-        </div>
-        <div class="card-signature">
-          <img
-            alt="Glitch logo"
-            src="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Fnightfish.svg?v=1575410607741"
-          />
-          From the Glitch team
         </div>
       </div>
       <div class="bottomFold" aria-hidden="true">
