🎌📒 Checkpoint ./index.html:17624169/975 ./style.css:17624169/88

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Thanks for being a part of our community in 2019."
     />
-    <title>Thank You from Glitch</title>
+    <title>Thank You Veterans of Foreign Wars!</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preload" href="/script.js" as="script" />
     <link
@@ -26,10 +26,13 @@
       <div class="card">
         <div class="card-message">
           <h1>
-            Happy New Year 2020!
+            Thank you for your service!
           </h1>
           <p>
-             Have an awesome year!! Stay health & keep coding! :D 
+            I personally want to thank you for everything you have done for the country I love. 
+            Without you, America would not be a land of the free. 
+            Your dedication and service to this country will never be forgotten. 
+              
           </p>
         </div>
       </div>
