--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://cdn.glitch.com/4647233c-b193-47ac-9479-2e80e80c9951%2Ffavicon.png?v=1575577779339"
       type="image/x-icon"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="cardPositioningContainer">
@@ -40,12 +41,7 @@
         <div class="bottomFold-front"></div>
       </div>
 
-      <a
-        class="button"
-        href="https://glitch.com/edit/#!/remix/thank-you-from-glitch"
-      >
-        Remix This Card
-      </a>
+     
     </div>
 
     <canvas
@@ -53,26 +49,7 @@
       aria-label="An animation of snow falling"
     ></canvas>
 
-    <div class="presents">
-      <canvas
-        class="presents-1"
-        width="250"
-        height="250"
-        aria-label="A 3D, red floating present"
-      ></canvas>
-      <canvas
-        class="presents-2"
-        width="100"
-        height="100"
-        aria-label="A 3D, green floating present"
-      ></canvas>
-      <canvas
-        class="presents-3"
-        width="300"
-        height="300"
-        aria-label="A 3D, blue floating present"
-      ></canvas>
-    </div>
+    
 
     <script src="https://unpkg.com/zdog@1.1.1/dist/zdog.dist.min.js"></script>
     <script src="/script.js" type="module" defer></script>
