🍏👁 Checkpoint ./style.css:17624169/202 ./index.html:17624169/2223

--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
   <body>
     <div class="cardPositioningContainer">
       <div class="topFold" aria-hidden="true">
-        <div class="topFold-front"></div>
+  
+        <div class="topFold-front">
+        <p>
+          Thank you HSF staff, mentors, panelists, Wells Fargo, and USC!
+        </p>
+        </div>
+        
       </div>
       <div class="card">
         <div class="card-message">
           <h1>
-            Thank you for your service!
+            Thank you HSF staff, mentors, panelists, Wells Fargo, and USC!
           </h1>
           <p>
-            I personally want to thank you for everything you have done for the
-            country I love. Without you, America would not be the land of the
-            free. Your dedication and service to this country will never be
-            forgotten.
+            Before the Youth Leadership Institute, I had all of the drive but none of the know-how. This program gave me valuable
+            insight into how to reach my goals and to stay motivated through hardships. Thanks again for 5 days that provided me a life-time 
+            of knowledge.
           </p>
         </div>
       </div>
