🌠⛲️ Checkpoint ./index.html:17624169/774 ./style.css:17624169/188

--- a/index.html
+++ b/index.html
@@ -23,23 +23,17 @@
   <body>
     <div class="cardPositioningContainer">
       <div class="topFold" aria-hidden="true">
-  
         <div class="topFold-front">
         <p>
           Thank you HSF staff, mentors, panelists, Wells Fargo, and USC!
         </p>
         </div>
-        
       </div>
       <div class="card">
         <div class="card-message">
-          <h1>
-            Thank you HSF staff, mentors, panelists, Wells Fargo, and USC!
-          </h1>
+          
           <p>
-            Before the Youth Leadership Institute, I had all of the drive but none of the know-how. This program gave me valuable
-            insight into how to reach my goals and to stay motivated through hardships. Thanks again for 5 days that provided me a life-time 
-            of knowledge.
+            Before the Youth Leadership Institute, I had all of the drive, but none of the know-how. This program gave me valuable insight into how to reach my goals and stay motivated through hardships. Thanks again for 5 days packed with information that provided me with a lifetime of knowledge.
           </p>
         </div>
       </div>
