👙🐈 Checkpoint ./style.css:17624169/24 ./index.html:17624169/435

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
         <div class="card-message">
           
           <p>
-            Before the Youth Leadership Institute, I had all of the drive, but none of the know-how. This program gave me valuable insight into how to reach my goals and stay motivated through hardships. Thanks again for 5 days packed with information that provided me with a lifetime of knowledge.
+            Before the Youth Leadership Institute, I had all of the drive, but none of the know-how. This program gave me valuable insight into how to reach my goals and stay motivated through hardships.
+            For example, I learned the importance of "trying pistachio ice cream" throughout life because you never know if you might like something until you try it.
+            
+          </p>
+          <p>
+            Thanks again for 5 days packed with information that provided me with a lifetime of knowledge.
           </p>
         </div>
       </div>
