🏎🍔 Checkpoint ./index.html:20134537/1379

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="topFold" aria-hidden="true">
         <div class="topFold-front">
         <p>
-          Thank you HSF staff, mentors, panelists, Wells Fargo, and USC!
+          Thank you HSF staff, speakers, Wells Fargo, American Express, UChicago, and mentees!
         </p>
         </div>
       </div>
@@ -33,12 +33,13 @@
         <div class="card-message">
           
           <p>
-            Before the Youth Leadership Institute, I had all of the drive, but none of the know-how. This program gave me valuable insight into how to reach my goals and stay motivated through hardships.
-            For example, I learned the importance of "trying pistachio ice cream" throughout life because you never know if you might like something until you try it.
+            Two years ago I completed the YLI virtually and learned the importance of being fearless and unreasonalbe. This year as a YLI mentor,
+            I put that advice into practice. I strove to be a source of comfort and confidence for my mentees by encouraging them to speak publicly and 
+            passionately about their aspirations. Familia 3 became a supportive sisterhood that will survive any amount of distance or time that separates us.
             
           </p>
           <p>
-            Thanks again for 5 days packed with information that provided me with a lifetime of knowledge.
+            Thank you again for 5 days packed with career advice, personal growth, friendship, and family.
           </p>
         </div>
       </div>
