🐠🎎 Checkpoint ./style.css:20134537/726 ./index.html:20134537/8016

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       <div class="bottomFold" aria-hidden="true">
         <div class="bottomFold-front">
           <p>
-            Sincerely, Leah West
+            Sincerely,  Leah West: Leader in Training
           </p>
+          
         </div>
       </div>
     </div>
