--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="topFold" aria-hidden="true">
         <div class="topFold-front">
         <p>
-          Thank you HSF staff, speakers, Wells Fargo, American Express, UChicago, and mentees!
+          Thank you HSF staff, fellow mentors, speakers, Wells Fargo, American Express, UChicago, and mentees!
         </p>
         </div>
       </div>
@@ -33,7 +33,7 @@
         <div class="card-message">
           
           <p>
-            Two years ago I completed the YLI virtually and learned the importance of being fearless and unreasonalbe. This year as a YLI mentor,
+            Two years ago I completed the YLI virtually and learned the importance of being fearless and unreasonable. This year as a YLI mentor,
             I put that advice into practice. I strove to be a source of comfort and confidence for my mentees by encouraging them to speak publicly and 
             passionately about their aspirations. Familia 3 became a supportive sisterhood that will survive any amount of distance or time that separates us.
             
